builds/tests/243/data/attachments/24ba8f8924afbd8f.txt
2026-05-29 16:24:43,448 INFO     yoyo.migrations — Applying 0001_initial_schema
2026-05-29 16:24:43,449 INFO     yoyo.migrations —  - applying step 0
2026-05-29 16:24:43,449 INFO     yoyo.migrations —  - applying step 1
2026-05-29 16:24:43,449 INFO     yoyo.migrations —  - applying step 2
2026-05-29 16:24:43,449 INFO     yoyo.migrations —  - applying step 3
2026-05-29 16:24:43,449 INFO     yoyo.migrations —  - applying step 4
2026-05-29 16:24:43,450 INFO     yoyo.migrations —  - applying step 5
2026-05-29 16:24:43,450 INFO     yoyo.migrations —  - applying step 6
2026-05-29 16:24:43,450 INFO     yoyo.migrations —  - applying step 7
2026-05-29 16:24:43,450 INFO     yoyo.migrations —  - applying step 8
2026-05-29 16:24:43,450 INFO     yoyo.migrations —  - applying step 9
2026-05-29 16:24:43,450 INFO     yoyo.migrations —  - applying step 10
2026-05-29 16:24:43,451 INFO     yoyo.migrations —  - applying step 11
2026-05-29 16:24:43,451 INFO     yoyo.migrations —  - applying step 12
2026-05-29 16:24:43,451 INFO     yoyo.migrations —  - applying step 13
2026-05-29 16:24:43,451 INFO     yoyo.migrations —  - applying step 14
2026-05-29 16:24:43,453 INFO     yoyo.migrations — Marking 0001_initial_schema applied
2026-05-29 16:24:43,454 INFO     yoyo.migrations — Applying 0002_exchange_rates_source_target
2026-05-29 16:24:43,454 INFO     yoyo.migrations —  - applying step 0
2026-05-29 16:24:43,455 INFO     yoyo.migrations —  - applying step 1
2026-05-29 16:24:43,457 INFO     yoyo.migrations — Marking 0002_exchange_rates_source_target applied
2026-05-29 16:24:43,458 INFO     yoyo.migrations — Applying 0003_app_currencies
2026-05-29 16:24:43,458 INFO     yoyo.migrations —  - applying step 0
2026-05-29 16:24:43,460 INFO     yoyo.migrations — Marking 0003_app_currencies applied
2026-05-29 16:24:43,460 INFO     yoyo.migrations — Applying 0004_receipt_pipeline
2026-05-29 16:24:43,461 INFO     yoyo.migrations —  - applying step 0
2026-05-29 16:24:43,461 INFO     yoyo.migrations —  - applying step 1
2026-05-29 16:24:43,461 INFO     yoyo.migrations —  - applying step 2
2026-05-29 16:24:43,461 INFO     yoyo.migrations —  - applying step 3
2026-05-29 16:24:43,462 INFO     yoyo.migrations —  - applying step 4
2026-05-29 16:24:43,462 INFO     yoyo.migrations —  - applying step 5
2026-05-29 16:24:43,462 INFO     yoyo.migrations —  - applying step 6
2026-05-29 16:24:43,462 INFO     yoyo.migrations —  - applying step 7
2026-05-29 16:24:43,462 INFO     yoyo.migrations —  - applying step 8
2026-05-29 16:24:43,463 INFO     yoyo.migrations —  - applying step 9
2026-05-29 16:24:43,463 INFO     yoyo.migrations —  - applying step 10
2026-05-29 16:24:43,463 INFO     yoyo.migrations —  - applying step 11
2026-05-29 16:24:43,464 INFO     yoyo.migrations —  - applying step 12
2026-05-29 16:24:43,464 INFO     yoyo.migrations —  - applying step 13
2026-05-29 16:24:43,464 INFO     yoyo.migrations —  - applying step 14
2026-05-29 16:24:43,464 INFO     yoyo.migrations —  - applying step 15
2026-05-29 16:24:43,465 INFO     yoyo.migrations —  - applying step 16
2026-05-29 16:24:43,465 INFO     yoyo.migrations —  - applying step 17
2026-05-29 16:24:43,466 INFO     yoyo.migrations —  - applying step 18
2026-05-29 16:24:43,466 INFO     yoyo.migrations —  - applying step 19
2026-05-29 16:24:43,466 INFO     yoyo.migrations —  - applying step 20
2026-05-29 16:24:43,466 INFO     yoyo.migrations —  - applying step 21
2026-05-29 16:24:43,466 INFO     yoyo.migrations —  - applying step 22
2026-05-29 16:24:43,468 INFO     yoyo.migrations — Marking 0004_receipt_pipeline applied
2026-05-29 16:24:43,469 INFO     yoyo.migrations — Applying 0005_income_logging
2026-05-29 16:24:43,469 INFO     yoyo.migrations —  - applying step 0
2026-05-29 16:24:43,470 INFO     yoyo.migrations —  - applying step 1
2026-05-29 16:24:43,470 INFO     yoyo.migrations —  - applying step 2
2026-05-29 16:24:43,470 INFO     yoyo.migrations —  - applying step 3
2026-05-29 16:24:43,471 INFO     yoyo.migrations —  - applying step 4
2026-05-29 16:24:43,471 INFO     yoyo.migrations —  - applying step 5
2026-05-29 16:24:43,471 INFO     yoyo.migrations —  - applying step 6
2026-05-29 16:24:43,472 INFO     yoyo.migrations —  - applying step 7
2026-05-29 16:24:43,472 INFO     yoyo.migrations —  - applying step 8
2026-05-29 16:24:43,472 INFO     yoyo.migrations —  - applying step 9
2026-05-29 16:24:43,472 INFO     yoyo.migrations —  - applying step 10
2026-05-29 16:24:43,472 INFO     yoyo.migrations —  - applying step 11
2026-05-29 16:24:43,472 INFO     yoyo.migrations —  - applying step 12
2026-05-29 16:24:43,472 INFO     yoyo.migrations —  - applying step 13
2026-05-29 16:24:43,473 INFO     yoyo.migrations —  - applying step 14
2026-05-29 16:24:43,473 INFO     yoyo.migrations —  - applying step 15
2026-05-29 16:24:43,473 INFO     yoyo.migrations —  - applying step 16
2026-05-29 16:24:43,473 INFO     yoyo.migrations —  - applying step 17
2026-05-29 16:24:43,473 INFO     yoyo.migrations —  - applying step 18
2026-05-29 16:24:43,473 INFO     yoyo.migrations —  - applying step 19
2026-05-29 16:24:43,473 INFO     yoyo.migrations —  - applying step 20
2026-05-29 16:24:43,474 INFO     yoyo.migrations —  - applying step 21
2026-05-29 16:24:43,474 INFO     yoyo.migrations —  - applying step 22
2026-05-29 16:24:43,474 INFO     yoyo.migrations —  - applying step 23
2026-05-29 16:24:43,474 INFO     yoyo.migrations —  - applying step 24
2026-05-29 16:24:43,474 INFO     yoyo.migrations —  - applying step 25
2026-05-29 16:24:43,474 INFO     yoyo.migrations —  - applying step 26
2026-05-29 16:24:43,474 INFO     yoyo.migrations —  - applying step 27
2026-05-29 16:24:43,475 INFO     yoyo.migrations —  - applying step 28
2026-05-29 16:24:43,475 INFO     yoyo.migrations —  - applying step 29
2026-05-29 16:24:43,475 INFO     yoyo.migrations —  - applying step 30
2026-05-29 16:24:43,475 INFO     yoyo.migrations —  - applying step 31
2026-05-29 16:24:43,475 INFO     yoyo.migrations —  - applying step 32
2026-05-29 16:24:43,476 INFO     yoyo.migrations —  - applying step 33
2026-05-29 16:24:43,478 INFO     yoyo.migrations — Marking 0005_income_logging applied
2026-05-29 16:24:43,484 INFO     dinary.background.classification.task — Receipt drain: processing receipt_id=1
2026-05-29 16:24:43,485 ERROR    dinary.background.classification.task — Permanent error for receipt_id=1 — poisoning
Traceback (most recent call last):
  File "/home/runner/work/dinary/dinary/src/dinary/background/classification/task.py", line 175, in _process_job
    items = await asyncio.to_thread(_get_items, job.receipt_id)
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/opt/hostedtoolcache/Python/3.13.13/x64/lib/python3.13/asyncio/threads.py", line 25, in to_thread
    return await loop.run_in_executor(None, func_call)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/opt/hostedtoolcache/Python/3.13.13/x64/lib/python3.13/concurrent/futures/thread.py", line 59, in run
    result = self.fn(*self.args, **self.kwargs)
  File "/home/runner/work/dinary/dinary/src/dinary/background/classification/task.py", line 397, in _get_items
    raise RuntimeError(
        f"receipt_id={receipt_id}: no items after parsing — parse error",
    )
RuntimeError: receipt_id=1: no items after parsing — parse error
